Reintroduce sigsum_key and include sigsum_secondary_pubkey
This allows us to store the sigsum_key inside the host vars.

We also move the key generation from the service startup to the role
itself

--- a/roles/sigsum/defaults/main.yml
+++ b/roles/sigsum/defaults/main.yml
@@ -43,6 +43,7 @@ sigsum_external_endpoint: "127.0.0.1:14784"
 sigsum_internal_endpoint: "192.168.19.1:14785"
 sigsum_trillian_rpc_server: "localhost:6962"
 sigsum_timeout: 10s
+sigsum_key: ""
 sigsum_key_file: ""
 sigsum_interval: 30s
 sigsum_log_file: ""
@@ -55,6 +56,7 @@ sigsum_max_range: 4096
 sigsum_rate_limit_file: ""
 sigsum_allow_test_domain: false
 sigsum_secondary_url: ""
+sigsum_secondary_pubkey: ""
 sigsum_secondary_pubkey_file: ""
 
 # Internal implementation detail
