Remove url prefix from the documentation.

--- a/roles/sigsum/meta/argument_specs.yml
+++ b/roles/sigsum/meta/argument_specs.yml
@@ -74,7 +74,7 @@ argument_specs:
 
       sigsum_url_prefix:
         type: "str"
-        default: sigsum
+        default: ""
         description: "a prefix that precedes /<endpoint>"
 
       # TODO: Better description
