--- a/roles/sigsum/meta/argument_specs.yml
+++ b/roles/sigsum/meta/argument_specs.yml
@@ -49,7 +49,7 @@ argument_specs:
 
       sigsum_lib_version:
         type: "str"
-        default: v0.1.22-22-ged74255
+        default: v0.1.22-23
         description: "The sigsum library repository version"
 
       sigsum_log_srcdir:
@@ -64,7 +64,7 @@ argument_specs:
 
       sigsum_log_version:
         type: "str"
-        default: v0.8.0-55-g25420cb
+        default: v0.9.0
         description: "The sigsum log repository version"
 
       sigsum_logname:
