--- a/roles/sigsum/meta/argument_specs.yml
+++ b/roles/sigsum/meta/argument_specs.yml
@@ -213,6 +213,11 @@ argument_specs:
           - "needs a file that has a openssh formated public key"
           - "only used when setting up a secondary for the primary node"
 
+      sigsum_witness_config:
+        type: "str"
+        description: 
+          - "the witness configuration for the sigsum primary"
+
 # # TODO: Path wont be used
 # sigsum_sth_file: "/var/lib/sigsum-log/sth"
 # "path to file where latest published STH is being stored"
