Updated documentation with `sigsum_witness_config`
Signed-off-by: Morten Linderud <morten.linderud@glasklarteknik.se>

--- a/roles/sigsum/meta/argument_specs.yml
+++ b/roles/sigsum/meta/argument_specs.yml
@@ -217,6 +217,7 @@ argument_specs:
         type: "str"
         description: 
           - "the witness configuration for the sigsum primary"
+          - "supported in sigsum-log version >=v0.12.0"
 
 # # TODO: Path wont be used
 # sigsum_sth_file: "/var/lib/sigsum-log/sth"
