--- a/roles/litebastion/meta/main.yml
+++ b/roles/litebastion/meta/main.yml
@@ -1,11 +1,14 @@
+---
 galaxy_info:
-  description: A role for installing, configuring, and managing the litebastion software as a systemd service
+  description: >
+    A role for installing, configuring, and managing the litebastion software as
+    a systemd service
   namespace: sigsum
   role_name: litebastion
   license: BSD-2-Clause
 
   issue_tracker_url: https://git.glasklar.is/sigsum/admin/litebastion/-/issues
-  min_ansible_version: 2.14.3 # Earlier may work but not tested
+  min_ansible_version: 2.14.3  # earlier may work but not tested
   platforms:
     - name: Debian
       versions:
