--- a/roles/litebastion/molecule/default/tests/update-backend-ok.yml
+++ b/roles/litebastion/molecule/default/tests/update-backend-ok.yml
@@ -4,11 +4,17 @@
   become: true
   tasks:
     - name: Check number of litebastion service starts
-      ansible.builtin.shell: "journalctl -u litebastion.service | grep 'Started litebastion.service' | wc -l"
+      ansible.builtin.shell: >
+        journalctl -u litebastion.service |
+        grep 'Started litebastion.service' |
+        wc -l
       register: num_start
 
     - name: Check number of litebastion service reloads
-      ansible.builtin.shell: "journalctl -u litebastion.service | grep 'Reloaded litebastion.service' | wc -l"
+      ansible.builtin.shell: >
+        journalctl -u litebastion.service |
+        grep 'Reloaded litebastion.service' |
+        wc -l
       register: num_reload
 
     - name: Assert that there's a single start
