ci: Run yamllint

--- a/roles/litebastion/.gitlab-ci.yml
+++ b/roles/litebastion/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+---
 stages:
   - lint
 
@@ -6,8 +7,10 @@ ansible-lint:
   image: debian:stable
   before_script:
     - apt update
-    - apt install -y ansible-lint
+    - apt install -y ansible-lint yamllint
     - ansible --version
     - ansible-lint --version
+    - yamllint --version
   script:
     - ansible-lint .
+    - yamllint .
