Use golang role as a dependency of the sigsum role
Notes on upgrading:
- The golang role *does not* set "force: no" (unlike the old sigsum role
  behavior).  The backports file is now completely managed by ansible.
- The golang_debian_use_backports option needs to be set explicitly.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,18 +1,7 @@
 ---
-- name: Setup primary
+- name: Setup primary log-server
   hosts: sigsum-primary
-  tasks:
-    - name: Create database for primary node
-      ansible.builtin.import_role:
-        name: sigsum.ansible.mariadb
-    - name: Deploy sigsum primary node
-      ansible.builtin.import_role:
-        name: sigsum.ansible.sigsum
-
-# - name: Setup secondary
-#   hosts: sigsum-secondary
-#   tasks:
-#     - name: Role
-#       ansible.builtin.import_role:
-#         name: sigsum.ansible.test
-
+  roles:
+    - sigsum.ansible.mariadb
+    - sigsum.ansible.golang
+    - sigsum.ansible.sigsum
