--- a/roles/golang/tasks/Debian.yml
+++ b/roles/golang/tasks/Debian.yml
@@ -3,12 +3,13 @@
   ansible.builtin.copy:
     content: "deb {{ golang_debian_deb_source }} {{ ansible_distribution_release }}-backports main"
     dest: "/etc/apt/sources.list.d/{{ ansible_distribution_release }}-backports.list"
+    mode: '0644'
   when: golang_debian_use_backports
   register: add_backports
 
 - name: Update apt cache
   ansible.builtin.apt:
-    update_cache: yes
+    update_cache: true
   when: add_backports
 
 - name: Install golang
@@ -16,5 +17,5 @@
     default_release: "{{ golang_debian_use_backports | ternary(ansible_distribution_release + '-backports', omit) }}"
     pkg: golang-go
     state: present
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 10800
