--- a/roles/sigsum/handlers/main.yml
+++ b/roles/sigsum/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Generate primary key
+  command: "{{ sigsum_home }}/go/bin/sigsum-key gen -o {{ sigsum_key_file }}"
+  become_user: "{{ sigsum_user }}"
+  become: true
 
 - name: restart trillian
   systemd:
