--- a/molecule/default/host_vars/sigsum-primary.yml
+++ b/molecule/default/host_vars/sigsum-primary.yml
@@ -11,12 +11,10 @@ sigsum_trillian_sequencer_interval: 100ms
 sigsum_trillian_batch_size: 1000
 
 sigsum_db_pw: changeme
+sigsum_db_name: test
 
 mysql_root_user: root
 mysql_root_password: "{{sigsum_db_pw}}" 
-mysql_database:
-  - test
-
 mysql_users:
   - user: sigsum
     password: changeme
