--- a/molecule/default/host_vars/sigsum-primary.yml
+++ b/molecule/default/host_vars/sigsum-primary.yml
@@ -2,6 +2,7 @@
 sigsum_logname: 'molecule-test'
 sigsum_role: primary
 sigsum_url_prefix: testonly
+sigsum_interval: 3s
 sigsum_log_level: "info"
 
 sigsum_external_endpoint: 0.0.0.0:14784
@@ -9,6 +10,11 @@ sigsum_internal_endpoint: 0.0.0.0:14785
 
 sigsum_trillian_sequencer_interval: 100ms
 sigsum_trillian_batch_size: 1000
+
+sigsum_tools_from_sigsum_go:
+  - { name: "sigsum-key" }  # needed by sigsum role
+  - { name: "sigsum-submit" }  # needed by verify.yml
+  - { name: "sigsum-verify" }  # needed by verify.yml
 
 sigsum_db_pw: changeme
 sigsum_db_name: test
